// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiNotificationEventReadButton is rendered 1`] = `
<button
  aria-label="Mark as read"
  class="euiButtonIcon euiButtonIcon--primary euiNotificationEventReadButton euiNotificationEventReadButton--isRead"
  data-test-subj="notificationEventReadButton"
  disabled=""
  title="Mark as read"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    data-euiicon-type="dot"
  />
</button>
`;

exports[`EuiNotificationEventReadButton renders isRead to false 1`] = `
<button
  aria-label="Mark as read"
  class="euiButtonIcon euiButtonIcon--primary euiNotificationEventReadButton euiNotificationEventReadButton--isUnread"
  data-test-subj="notificationEventReadButton"
  title="Mark as read"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiButtonIcon__icon"
    data-euiicon-type="dot"
  />
</button>
`;
